# ludus

./: CNAME  README.md
project/android/: build.gradle  settings.gradle  setup.ps1
project/android/app/: CMakelists.txt  build.gradle
project/android/app/src/main/: AndroidManifest.xml
project/android/gradle/wrapper/: gradle-wrapper.properties
project/android/sdl/: .gitignore  build.gradle
project/android/sdl/jni/: Application.mk  SDL2_image
project/android/sdl/src/main/: AndroidManifest.xml
project/main/assets/shaders/opengl/: default.frag  default.vert
project/main/include/: ludus.hpp
project/main/src/: main.cpp
project/main/src/application/: application.cpp  application.hpp
project/main/src/application/opengl/: opengl-application.cpp  opengl-application.hpp  opengl-asset-manager.cpp  opengl-asset-manager.hpp  opengl-mesh.cpp  opengl-mesh.hpp  opengl-pipeline.cpp  opengl-pipeline.hpp  opengl-renderer.hpp
project/main/src/application/vulkan/: vulkan-application.cpp  vulkan-application.hpp  vulkan-asset-manager.cpp  vulkan-asset-manager.hpp  vulkan-buffer.cpp  vulkan-buffer.hpp  vulkan-command-pool.cpp  vulkan-command-pool.hpp  vulkan-common.cpp  vulkan-common.hpp  vulkan-context.cpp  vulkan-context.hpp  vulkan-device.cpp  vulkan-device.hpp  vulkan-image-view.cpp  vulkan-image-view.hpp  vulkan-image.cpp  vulkan-image.hpp  vulkan-mesh.cpp  vulkan-mesh.hpp  vulkan-physical-device.cpp  vulkan-physical-device.hpp  vulkan-pipeline.cpp  vulkan-pipeline.hpp  vulkan-render-context.cpp  vulkan-render-context.hpp  vulkan-render-pass.cpp  vulkan-render-pass.hpp  vulkan-surface.cpp  vulkan-surface.hpp  vulkan-swapchain.cpp  vulkan-swapchain.hpp  vulkan-texture.cpp
project/main/src/core/: application.hpp  asset-inventory.cpp  asset-manager.hpp  assets.cpp  assets.hpp  bitmap.cpp  bitmap.hpp  engine.cpp  engine.hpp  graphics-context.hpp  graphics-wrapper.hpp  log.cpp  log.hpp  mesh.cpp  mesh.hpp  perspective-camera.cpp  perspective-camera.hpp  platform.cpp  renderer-api.cpp  renderer.hpp  sdl-window.cpp  sdl-window.hpp  sdl-wrapper.cpp  sdl-wrapper.hpp  static-mesh-instance.cpp  static-mesh-instance.hpp  vertex.cpp  vertex.hpp  window-size.hpp
project/main/src/graphics/opengl/: opengl-application.cpp  opengl-application.hpp  opengl-asset-manager.cpp  opengl-renderer.cpp  opengl-renderer.hpp  opengl-texture.cpp  opengl-texture.hpp
project/main/src/graphics/vulkan/: vulkan-application.cpp  vulkan-application.hpp  vulkan-common.cpp  vulkan-context.cpp  vulkan-context.hpp  vulkan-device.cpp  vulkan-device.hpp  vulkan-image-view.cpp  vulkan-image-view.hpp  vulkan-image.hpp  vulkan-physical-device.cpp  vulkan-physical-device.hpp  vulkan-render-context.cpp  vulkan-render-context.hpp  vulkan-render-pass.cpp  (+3 more)
project/main/src/scene/: player.hpp  scene-main.cpp  scene-main.hpp  scene.hpp
project/main/src/sdl/: sdl-wrapper.cpp  sdl-wrapper.hpp
project/main/vulkan_shader_source/: compile_shaders.ps1  default.vert
project/quest/: .gitignore  build.gradle  settings.gradle  setup.ps1
project/quest/app/: CMakelists.txt  build.gradle
project/src/: .gitignore
project/src/assets/textures/: crate.ktx  red_cross_hatch.ktx
project/src/common/core/: application.hpp  asset-inventory.cpp  asset-inventory.hpp  asset-loader.hpp  asset-manifest.hpp  glm-wrapper.hpp  internal_ptr.hpp  mesh.cpp  mesh.hpp  perspective-camera.cpp  perspective-camera.hpp  platform.hpp  renderer-api.cpp  renderer-api.hpp  renderer.hpp  scene.hpp  static-mesh-instance.cpp  static-mesh-instance.hpp  vertex.hpp
project/src/common/sdl/: bitmap.hpp  sdl-asset-loader.cpp  sdl-window.hpp  sdl-wrapper.cpp
project/src/include/: ludus.hpp
project/src/platform/quest/: assets.cpp  engine.cpp  engine.hpp  main.cpp  vulkan-application.cpp  vulkan-application.hpp
project/src/platform/windows/: engine.cpp  main.cpp  vulkan-application.cpp  vulkan-application.hpp
project/src/vulkan_shader_source/: default.frag  default.vert  default_multiView.frag  default_multiView.vert
project/windows/: CMakeLists.txt  cmake-post-build.ps1  setup.ps1
project/windows/windows/: engine.cpp  engine.hpp
(+57 files in other folders)
